--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,11 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,900;1,100;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap" rel="stylesheet">
     <style> 
     * { font-family: 'Roboto', sans-serif;
+    margin: 0;
+    overflow-x: hidden;
     }
     </style>
     <title>Mike Sauce</title>
